<resources>
    <string name="app_name">VtsCode</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="html_string">HTML</string>
    <string name="css_string">CSS</string>
    <string name="javascript_string">JavaScript</string>
    <string name="jquery_string">jQuery</string>
    <string name="xml_string">XML</string>
    <string name="sql_string">SQL</string>
    <string name="cpp_string">C++</string>
    <string name="csharp_string">C#</string>
    <string name="java_string">Java</string>
    <string name="php_string">PHP</string>
    <string name="button_send">Send!</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="quit">Da li stvarno želite da izadjete?</string>
    <string name="quit_message">Izlazite iz aplikacije {VTSCode}.</string>
    <string-array name="html">

        <item>&lt;html&gt;&lt;/html&gt;</item>
        <item>&lt;body&gt;&lt;/body&gt;</item>
        <item>&lt;head&gt;&lt;/head&gt;</item>
        <item>&lt;link&gt;&lt;/link&gt;</item>
        <item>&lt;script&gt;&lt;/script&gt;</item>
        <item>&lt;a&gt;&lt;/a&gt;</item>
        <item>&lt;h1&gt;&lt;/h1&gt;</item>
        <item>&lt;h2&gt;&lt;/h2&gt;</item>
        <item>&lt;h3&gt;&lt;/h3&gt;</item>
        <item>&lt;h4&gt;&lt;/h4&gt;</item>
        <item>&lt;h5&gt;&lt;/h5&gt;</item>
        <item>&lt;h6&gt;&lt;/h6&gt;</item>

    </string-array>
    <string-array name="html_browser">
        <item>CFOSI</item>
        <item>CFOSI</item>
        <item>CFOSI</item>
        <item>CFOSI</item>
        <item>CFOSI</item>
        <item>CFOSI</item>
        <item>CFOSI</item>
        <item>CFOSI</item>
        <item>CFOSI</item>
        <item>CFOSI</item>
        <item>CFOSI</item>
        <item>CFOSI</item>
        <item>CFOSI</item>
    </string-array>
    <string-array name="html_explanation">

        <item>Osnovni tag</item>
        <item>Telo dokumenta</item>
        <item>Zaglavlje</item>
        <item>Ukljucivanje biblioteka</item>
        <item>Pisanje nekog script jezika</item>
        <item>Link</item>
        <item>Naslov prvog nivoa</item>
        <item>Naslov drugog nivoa</item>
        <item>Naslov treceg nivoa</item>
        <item>Naslov cetvrtog nivoa</item>
        <item>Naslov petog nivoa</item>
        <item>Naslov setog nivoa</item>

    </string-array>
    <string-array name="html_tagname">

        <item>html.txt</item>
        <item>body.txt</item>
        <item>head.txt</item>
        <item>link.txt</item>
        <item>script.txt</item>
        <item>a.txt</item>
        <item>h1.txt</item>
        <item>h2.txt</item>
        <item>h3.txt</item>
        <item>h4.txt</item>
        <item>h5.txt</item>
        <item>h6.txt</item>

    </string-array>
    <string-array name="css">

        <item>.class</item>
        <item>.id</item>
        <item>:active</item>
        <item>:after</item>
        <item>:before</item>
        <item>:first-child</item>
        <item>:first-letter</item>
        <item>:first-line</item>
        <item>:focus</item>
        <item>:hover</item>
        <item>:link</item>
        <item>:visited</item>

    </string-array>
    <string-array name="css_explanation">

        <item>Element klase</item>
        <item>Jedinstveno odredjuje klasu</item>
        <item>Aktivni element</item>
        <item>Element posle</item>
        <item>Element pre</item>
        <item>Prvo dete elementa</item>
        <item>Koristi se za dodavanje stila prvom elementu</item>
        <item>Koristi se za dodavanje stila prvoj liniji odredjenog elementa</item>
        <item>Element sa fokusom</item>
        <item>Element kada mis predje preko njega</item>
        <item>Link koji nije posecen</item>
        <item>Link koji je posecen</item>

    </string-array>
    <string-array name="javascript">

        <item>abs()</item>
        <item>acos()</item>
        <item>anchor()</item>
        <item>asin()</item>
        <item>atan()</item>
        <item>Komentar</item>
        <item>getElementById</item>
        <item>Funkcija</item>
        <item>Objekat</item>
        <item>Onclick</item>
        <item>Onmouseover</item>
        <item>String()</item>
        <item>Math.random()</item>
        <item>Date()</item>
        <item>parseFloat()</item>
        <item>getFullYear()</item>
        <item>Boolean()</item>
        <item>onkeydown()</item>
        <item>onchange()</item>
        <item>onmouseout()</item>
    </string-array>
    <string-array name="javascript_filename">
        <item>abs.txt</item>
        <item>acos.txt</item>
        <item>anchor.txt</item>
        <item>asin.txt</item>
        <item>atan.txt</item>
        <item>komentar.txt</item>
        <item>getElementById.txt</item>
        <item>Function.txt</item>
        <item>Objekat.txt</item>
        <item>Onclick.txt</item>
        <item>Onmouseover.txt</item>
        <item>StringFunkcija.txt</item>
        <item>Mathrandom.txt</item>
        <item>Date.txt</item>
        <item>parseFloat.txt</item>
        <item>getFullYear.txt</item>
        <item>Boolean.txt</item>
        <item>onkeydown.txt</item>
        <item>onchange.txt</item>
        <item>onmouseout.txt</item>
    </string-array>
    <string-array name="javascript_explanation">

        <item>Vraca apsolutnu vrednostu broja</item>
        <item>Vraca vrednost arcuscosinus u radijanima</item>
        <item>Vraca apsolutnu vrednostu broja</item>
        <item>Vraca vrednost arcuscosinus u radijanima</item>
        <item>Vraca apsolutnu vrednostu broja</item>
        <item>Stavlja komentar.</item>
        <item>Vraca element sa ID atributom.</item>
        <item>Poziva blok koda.</item>
        <item>Kreiranje i pozivanje objekta.</item>
        <item>Izvrsi JavaScript kada se klikne.</item>
        <item>Izvrsi JavaScript kada miš stane preko nečeg.</item>
        <item>Kovertuje različite objekte u string.</item>
        <item>Stvori slučajan broj.</item>
        <item>Prikaži datum.</item>
        <item>Pretvara string u float.</item>
        <item>Vrati godinu.</item>
        <item>Vrati true ili false vrednost.</item>
        <item>Izvrsi JavaScript kada korisnik pretiska taster.</item>
        <item>Izvrsi JavaScript kada korisnik promeni opciju izabranog elementa.</item>
        <item>Izvrsi JavaScript kada pomerite mis van elementa.</item>
    </string-array>
    <string-array name="jquery">

        <item>hide()</item>
        <item>show()</item>
        <item>ready()</item>
        <item>click()</item>
        <item>toggle()</item>
        <item>fadeIn()</item>
        <item>slideDown()</item>
        <item>animate()</item>
        <item>stop()</item>
        <item>Callback</item>
        <item>Get</item>
        <item>dblclick()</item>
        <item>mouseenter()</item>
        <item>mouseleave()</item>
        <item>slideDown()</item>
        <item>slideUp()</item>
        <item>slideToggle()</item>
        <item>css()</item>
        <item>remove()</item>
        <item>add()</item>

    </string-array>
    <string-array name="jquery_filename">

        <item>hide.txt</item>
        <item>show.txt</item>
        <item>ready.txt</item>
        <item>clickjquery.txt</item>
        <item>toggle.txt</item>
        <item>fadein.txt</item>
        <item>slideDown.txt</item>
        <item>animate.txt</item>
        <item>stop.txt</item>
        <item>Callback.txt</item>
        <item>Get.txt</item>
        <item>dblclick.txt</item>
        <item>mouseenter.txt</item>
        <item>mouseleave.txt</item>
        <item>slideDown.txt</item>
        <item>slideUp.txt</item>
        <item>slideToggle.txt</item>
        <item>css.txt</item>
        <item>remove.txt</item>
        <item>add.txt</item>

    </string-array>
    <string-array name="jquery_explanation">

        <item>Sakriva element.</item>
        <item>Pokazuje element.</item>
        <item>Sprema funkciju kada se učita stranica.</item>
        <item>Klikom na element, izvrši funkciju.</item>
        <item>Kruži hide() i show() između jednog elementa.</item>
        <item>Izbledi element.</item>
        <item>Kreira efekat klizanja.</item>
        <item>Kreira animaciju.</item>
        <item>Zaustavlja animaciju ili efekat.</item>
        <item>Funkcija se izvršava nakon završenog efekta.</item>
        <item>Dozvoljava manipulaciju DOM-a.</item>
        <item>Duplim klikom na element, izvrši funkciju.</item>
        <item>Postavkom misa preko nekog elementa, izvrši funkciju.</item>
        <item>Pomeranjem misa sa nekog elementa, izvrši funkciju.</item>
        <item>Sklizne element na dole.</item>
        <item>Sklizne element na gore.</item>
        <item>Sklizne element.</item>
        <item>Namesti ili vrati jednu ili više vrednosti izabranog elementa.</item>
        <item>Ukloni postojeći HTML element.</item>
        <item>Dodaj novi element.</item>

    </string-array>
    <string-array name="sql">
        <item>Tipovi podataka</item>
        <item>SHOW DATABASES;</item>
        <item>CREATE DATABASE `ime_baze`;</item>
        <item>DROP DATABASE `ime_baze`;</item>
        <item>USE `ime_baze`;</item>
        <item>SHOW TABLES;</item>
        <item>CREATE TABLE `ime_tabele`</item>
        <item>DESCRIBE `ime_tabele`;</item>
        <item>ALTER TABLE `ime_tabele` ADD </item>
        <item>ALTER TABLE `ime_tabele` CHANGE </item>
        <item>ALTER TABLE `ime_tabele` DROP </item>
        <item>INSERT INTO `ime_tabele` VALUES()</item>
        <item>UPDATE `ime_tabele` SET</item>
        <item>TRUNCATE TABLE `ime_tabele`;</item>
        <item>DROP TABLE `ime_tabele`</item>
        <item>SELECT</item>
        <item>FROM</item>
        <item>GROUP BY</item>
        <item>HAVING</item>
        <item>ORDER BY</item>
        <item>LIMIT</item>
        <item>WHERE</item>
        <item>LIKE</item>
        <item>AS</item>
        <item>INNER JOIN</item>
        <item>LEFT JOIN</item>
        <item>RIGHT JOIN</item>
        <item>COUNT</item>
        <item>SUM</item>
        <item>AVG</item>
        <item>MAX</item>
        <item>MIN</item>
    </string-array>
</resources>